--- a/km.html
+++ b/km.html
@@ -2,132 +2,176 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <title>Gastos de KM</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+  <title>Gastos 2N</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{{--bg:#f7f7fb;--card:#fff;--text:#101114;--muted:#6b7280;--blue:#0a84ff;--border:#e9e9ef}}
-    *{{box-sizing:border-box}} body{{margin:0;background:var(--bg);font-family:-apple-system,Inter,Segoe UI,Roboto;color:var(--text)}}
-    .topbar{{position:sticky;top:0;display:flex;gap:8px;align-items:center;padding:14px 16px;background:rgba(255,255,255,.85);backdrop-filter:blur(14px);border-bottom:1px solid var(--border)}}
-    .app{{max-width:520px;margin:0 auto;padding:14px}}
-    .card{{background:#fff;border:1px solid var(--border);border-radius:20px;padding:14px;box-shadow:0 8px 20px rgba(0,0,0,.04)}}
-    .grid{{display:grid;grid-template-columns:1fr 1fr;gap:10px}}
-    .field{{display:flex;flex-direction:column;gap:6px}}
-    .field input{{padding:10px;border:1px solid var(--border);border-radius:12px}}
-    .btn{{padding:12px 14px;border-radius:14px;border:1px solid var(--border);background:#fff;cursor:pointer;font-weight:600}}
-    .btn.primary{{background:var(--blue);color:#fff;border:none}}
-    .list{{display:grid;gap:8px;margin-top:10px}}
-    .item{{display:flex;gap:10px;align-items:center;justify-content:space-between;border:1px solid var(--border);border-radius:16px;padding:10px;background:#fff}}
-    .muted{{color:var(--muted)}}
+    :root{
+      --bg:#0b0b0d; --card:#111114; --ink:#f8f9fb; --muted:#9aa0a6; --blue:#0a84ff;
+      --border: #1d1d22; --accent:#2b2b31;
+    }
+    *{box-sizing:border-box} html,body{height:100%}
+    body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.4 Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial}
+    .app{max-width:480px;margin:0 auto;min-height:100vh;display:flex;flex-direction:column}
+    .topbar{position:sticky;top:0;background:rgba(17,17,20,.85);backdrop-filter:saturate(180%) blur(20px);border-bottom:1px solid var(--border);z-index:20}
+    .topbar .row{display:flex;align-items:center;gap:8px;padding:12px 14px}
+    .logo{font-weight:700;letter-spacing:.2px}
+    .spacer{flex:1}
+    .chip{border:1px solid var(--border);background:var(--accent);padding:8px 12px;border-radius:14px;cursor:pointer}
+    .chip.primary{background:linear-gradient(180deg,#0a84ff,#0066cc);border:none}
+    .chip.ghost{background:transparent}
+    .content{padding:14px;display:grid;gap:14px}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:18px;box-shadow:0 4px 20px rgba(0,0,0,.3);padding:12px}
+    .card h2{font-size:16px;margin:0 0 8px 0}
+    .muted{color:var(--muted)}
+    .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .grid2{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+    .hidden{display:none!important}
+    .fab{position:fixed;right:16px;bottom:24px;background:#0a84ff;border-radius:18px;padding:12px 14px;font-weight:600;box-shadow:0 8px 30px rgba(10,132,255,.5);cursor:pointer;z-index:30}
+    .nav{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+    .nav a{display:flex;flex-direction:column;gap:6px;align-items:center;justify-content:center;padding:14px 10px;border-radius:16px;background:linear-gradient(180deg,#131318,#0d0d12);border:1px solid var(--border);text-decoration:none;color:var(--ink)}
+    .nav .ico{font-size:20px}
+    input,select,textarea{width:100%;background:#0f0f14;color:var(--ink);border:1px solid #24242a;border-radius:12px;padding:10px 12px;font:inherit}
+    label{font-size:12px;color:var(--muted)}
+    .modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:end;justify-content:center}
+    .modal.open{display:flex}
+    .sheet{background:var(--card);border:1px solid var(--border);border-radius:18px 18px 0 0;padding:14px;max-width:480px;width:100%}
+    .sheet header{display:flex;align-items:center;justify-content:space-between;margin-bottom:10px}
+    .btn{border:1px solid var(--border);background:#141419;border-radius:12px;padding:10px 12px;color:var(--ink);cursor:pointer}
+    .btn.primary{background:linear-gradient(180deg,#0a84ff,#0066cc);border:none}
+    .list{display:grid;gap:8px}
+    .item{display:flex;align-items:center;justify-content:space-between;padding:10px;border:1px solid var(--border);border-radius:14px;background:#0e0e13}
+    .item .left{display:flex;gap:10px;align-items:center;min-width:0}
+    .thumb{width:44px;height:44px;border-radius:10px;object-fit:cover;border:1px solid var(--border);background:#16161c}
+    .amount.minus{color:#ff6b6b} .amount.plus{color:#4cd964}
+    .notice{font-size:12px;color:var(--muted)}
   </style>
+  <!-- Firebase compat SDKs -->
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
 </head>
+
 <body>
-  <header class="topbar">
-    <a class="btn" href="index.html">← Volver</a>
-    <strong>Gastos de KM</strong>
-    <span id="who" style="margin-left:auto;font-size:12px;background:#eef5ff;color:#0a84ff;border-radius:20px;padding:6px 10px">No login</span>
-  </header>
-
-  <main class="app">
-    <section class="card">
-      <div class="grid">
-        <div class="field">
-          <label>Fecha</label>
-          <input id="kDate" type="date"/>
-        </div>
-        <div class="field">
-          <label>Destino</label>
-          <input id="kDestino" type="text" placeholder="Cliente/ciudad"/>
-        </div>
-        <div class="field">
-          <label>KM empresa</label>
-          <input id="kEmp" type="number" step="0.1" min="0"/>
-        </div>
-        <div class="field">
-          <label>KM personales</label>
-          <input id="kPers" type="number" step="0.1" min="0"/>
-        </div>
-        <div class="field">
-          <label>Precio litro gasolina (€)</label>
-          <input id="kPrecio" type="number" step="0.001" min="0"/>
-        </div>
+<div class="app">
+  <div class="topbar">
+    <div class="row">
+      <a href="index.html" class="chip">◀︎ Volver</a>
+      <div class="logo">Gastos KM</div>
+      <div class="spacer"></div>
+      <button id="btnLogin" class="chip primary">Entrar</button>
+      <button id="btnLogout" class="chip hidden">Salir</button>
+    </div>
+  </div>
+  <div class="content">
+    <div class="card">
+      <h2>Nuevo registro</h2>
+      <div class="grid2">
+        <div><label>Fecha</label><input id="dDate" type="date"></div>
+        <div><label>Destino</label><input id="dDest" type="text" placeholder="Cliente / Ruta"></div>
+        <div><label>KM empresa</label><input id="dKmEmp" type="number" min="0" step="0.1"></div>
+        <div><label>KM personal</label><input id="dKmPer" type="number" min="0" step="0.1"></div>
+        <div><label>Precio €/L</label><input id="dPrice" type="number" min="0" step="0.01"></div>
       </div>
-      <div style="display:flex;gap:8px;margin-top:10px">
-        <button id="kSave" class="btn primary">Guardar</button>
-        <button id="kRefresh" class="btn">Refrescar</button>
+      <div class="row" style="margin-top:10px;justify-content:flex-end">
+        <button id="btnAdd" class="btn primary">Guardar</button>
       </div>
-    </section>
+      <div class="notice">Los totales se calculan por mes.</div>
+    </div>
 
-    <section class="card" style="margin-top:12px">
-      <strong>Resumen mensual</strong>
-      <div id="kSum" class="muted" style="margin-top:6px"></div>
-      <div id="kList" class="list"></div>
-    </section>
-  </main>
+    <div class="card">
+      <h2>Resumen del mes</h2>
+      <div id="resume" class="row"></div>
+    </div>
+
+    <div class="card">
+      <h2>Listado</h2>
+      <div class="list" id="list"></div>
+    </div>
+  </div>
+</div>
 
 <script>
-(function(){
-  const config = {{apiKey:"{apiKey}",authDomain:"{authDomain}",projectId:"{projectId}",storageBucket:"{storageBucket}",messagingSenderId:"{messagingSenderId}",appId:"{appId}" }};
-  firebase.initializeApp(config);
-  const auth=firebase.auth(); const db=firebase.firestore();
-  const $=id=>document.getElementById(id);
+  const $=(id)=>document.getElementById(id);
+  
+    // ======= CONFIG FIREBASE (TU PROYECTO) =======
+    const firebaseConfig = {
+      apiKey: "AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs",
+      authDomain: "gastos-2n.firebaseapp.com",
+      projectId: "gastos-2n",
+      storageBucket: "gastos-2n.firebasestorage.app",
+      messagingSenderId: "55010048795",
+      appId: "1:55010048795:web:4fb48d1e0f9006ebf7b1be"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+    const storage = firebase.storage();
 
-  $("kDate").value = new Date().toISOString().slice(0,10);
-
-  auth.onAuthStateChanged(user=>{
-    $("who").textContent = user ? (user.email||user.uid) : "No login";
-    if(user) refresh();
+  const provider = new firebase.auth.GoogleAuthProvider();
+  $('btnLogin').onclick = async ()=>{ try{ await auth.signInWithPopup(provider);}catch(e){alert(e.message)} };
+  $('btnLogout').onclick = async ()=> auth.signOut();
+  auth.onAuthStateChanged((u)=>{
+    if(u){ $('btnLogin').classList.add('hidden'); $('btnLogout').classList.remove('hidden'); load(); }
+    else{ $('btnLogin').classList.remove('hidden'); $('btnLogout').classList.add('hidden'); }
   });
 
-  function monthRangeOf(d){{ const s=new Date(d.getFullYear(), d.getMonth(), 1); const e=new Date(d.getFullYear(), d.getMonth()+1, 1); return [s,e]; }}
-  async function refresh(){{
-    const user=firebase.auth().currentUser; if(!user) return;
-    const d=new Date($("kDate").value || new Date().toISOString().slice(0,10));
-    const [s,e]=monthRangeOf(d);
-    const snap=await db.collection(`users/${{user.uid}}/kms`).where("date",">=",s).where("date","<",e).orderBy("date","asc").get();
-    const rows=snap.docs.map(x=>({{id:x.id, ...x.data()}}));
-    render(rows);
-  }}
+  // Defaults
+  $('dDate').value = new Date().toISOString().slice(0,10);
 
-  function render(rows){{
-    const list=$("kList"); list.innerHTML="";
-    let emp=0, per=0, avg=0;
-    rows.forEach(r=>{{
-      emp+=Number(r.km_empresa||0); per+=Number(r.km_personal||0); avg+=Number(r.precio_litro||0);
+  async function load(){
+    const u=auth.currentUser; if(!u) return;
+    const ym=new Date().toISOString().slice(0,7);
+    const s=new Date(ym+'-01T00:00:00'); const e=new Date(s.getFullYear(), s.getMonth()+1,1);
+    const snap = await db.collection(`users/${u.uid}/km`).where('date','>=',s).where('date','<',e).orderBy('date','desc').get();
+    const arr = snap.docs.map(d=>({id:d.id, ...d.data()}));
+    render(arr);
+  }
+
+  function render(rows){
+    const list=$('list'); list.innerHTML='';
+    let kmEmp=0, kmPer=0, priceSum=0, priceCount=0;
+    rows.forEach(r=>{
+      kmEmp+=Number(r.kmEmp||0); kmPer+=Number(r.kmPer||0);
+      if(r.price>0){ priceSum+=Number(r.price); priceCount++; }
       const d=r.date?.toDate? r.date.toDate(): new Date(r.date);
-      const el=document.createElement("div");
-      el.className="item";
-      el.innerHTML = `<div><div style="font-weight:600">${{d.toISOString().slice(0,10)}} · ${{r.destino||"-"}}</div>
-        <div class="muted" style="font-size:12px">Emp: ${{Number(r.km_empresa||0)}} km · Per: ${{Number(r.km_personal||0)}} km · ${{Number(r.precio_litro||0).toFixed(3)}}€/L</div></div>`;
-      list.appendChild(el);
-    }});
-    const precio = rows.length? avg/rows.length : 0;
-    const eurosPersonal = per * precio;
-    $("kSum").textContent = `KM empresa: ${{emp.toFixed(1)}} · KM personal: ${{per.toFixed(1)}} · Precio medio: ${{precio.toFixed(3)}} €/L · € a restar (pers*€/L): ${{eurosPersonal.toFixed(2)}}€`;
-  }}
+      const it=document.createElement('div'); it.className='item';
+      it.innerHTML = `<div class="left">
+        <div class="thumb"></div>
+        <div><div style="font-weight:600">${r.dest||'-'}</div>
+        <div class="muted" style="font-size:12px">${d.toLocaleDateString('es-ES')}</div></div></div>
+        <div style="text-align:right">
+          <div class="muted" style="font-size:12px">Emp: ${Number(r.kmEmp||0).toFixed(1)} km</div>
+          <div>Per: ${Number(r.kmPer||0).toFixed(1)} km</div>
+        </div>`;
+      list.appendChild(it);
+    });
+    const avg = priceCount? (priceSum/priceCount) : 0;
+    const eurosRestar = kmPer * avg;
+    $('resume').innerHTML = `
+      <div class="chip">KM empresa: <b>${kmEmp.toFixed(1)}</b></div>
+      <div class="chip">KM personal: <b>${kmPer.toFixed(1)}</b></div>
+      <div class="chip">€/L medio: <b>${avg.toFixed(2)}</b></div>
+      <div class="chip">€ a restar: <b>${eurosRestar.toFixed(2)}</b></div>`;
+  }
 
-  $("kSave").onclick = async ()=>{{
-    try{{
-      const user=firebase.auth().currentUser; if(!user) return alert("Haz login");
-      const dateISO=$("kDate").value||new Date().toISOString().slice(0,10);
-      await db.collection(`users/${{user.uid}}/kms`).add({{
-        date: new Date(dateISO),
-        destino: $("kDestino").value.trim(),
-        km_empresa: Number($("kEmp").value||0),
-        km_personal: Number($("kPers").value||0),
-        precio_litro: Number($("kPrecio").value||0),
-        createdAt: firebase.firestore.FieldValue.serverTimestamp()
-      }});
-      alert("KM guardado");
-      $("kDestino").value=""; $("kEmp").value=""; $("kPers").value=""; $("kPrecio").value="";
-      refresh();
-    }}catch(e){{ alert("Error: "+(e.message||"")); }}
-  }};
-  $("kRefresh").onclick=refresh;
-})();
+  $('btnAdd').onclick = async ()=>{
+    const u=auth.currentUser; if(!u) return alert('Login');
+    const dateISO=$('dDate').value||new Date().toISOString().slice(0,10);
+    const dest=$('dDest').value||'';
+    const kmEmp=Number($('dKmEmp').value||0);
+    const kmPer=Number($('dKmPer').value||0);
+    const price=Number($('dPrice').value||0);
+    await db.collection(`users/${u.uid}/km`).add({
+      date:new Date(dateISO), dest, kmEmp, kmPer, price, createdAt: firebase.firestore.FieldValue.serverTimestamp()
+    });
+    $('dDest').value=''; $('dKmEmp').value=''; $('dKmPer').value=''; $('dPrice').value='';
+    load();
+  };
 </script>
 </body>
 </html>
